Re-initializing all of APT when we want to revert pending changes is a bit... extreme... Instead, just keep a QApt::CacheState of the initial state, and use QApt::Backend::restoreCacheState() to restore it.

This is much safer as we're not invalidating every Package pointer, and in addition is
much faster. This fixes several related crashes.

BUG:281623
FIXED-IN:1.2.3